--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
   <div class="container" id="landingPage">
     <h2>Welcome to MV Digital Tools</h2>
-    <p>Helping students stay under the radar since 2023 🚀</p>
+    <p>Are you ready to save up tp 90% on Subscription services? 🚀</p>
     <button class="button" onclick="showIframe()">Let's Get Started</button>
   </div>
 
